--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ license = "MIT"
 #license-file = "LICENSE"
 readme = "README.md"
 repository = "https://github.com/kipfstuhl/rust-cli"
+edition="2018"
 
 [dependencies]
 rand="0.5"
+structopt="0.2.10"
